<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_my_wishlist"
            android:icon="@drawable/ic_heart"
            android:title="@string/menu_wishlist" />
    </group>
    <item android:title="@string/side_nav_account">
        <menu>
            <item
                android:id="@+id/nav_my_account"
                android:icon="@drawable/ic_user"
                android:title="@string/menu_account" />
    <item
        android:id="@+id/sign_out_button"
        android:icon="@drawable/sign_out"
        android:title="@string/menu_signout" />
        </menu>
    </item>
</menu>
